# Itasha.Corp_S4F3-W1TN3SS

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: .gitkeep
.s4f3-data/: context_usage.json
.s4f3-data/compaction-snapshots/: snapshot-20260617T184405Z.json
crates/itasha-crash-capture/: Cargo.toml
crates/itasha-crash-capture/src/: client.rs  consent.rs  emit.rs  lib.rs  monitor.rs  policy.rs
crates/itasha-crash-capture/tests/: structural_isolation.rs
crates/itasha-report-aggregate/: Cargo.toml
crates/itasha-report-aggregate/src/: consent.rs  lib.rs  measurement.rs  signature.rs  star.rs  submit.rs  tor.rs
crates/itasha-report-aggregate/tests/: tier_a_contract.rs
crates/itasha-report-core/: Cargo.toml  README.md
crates/itasha-report-core/src/: backend.rs  config.rs  consent.rs  e2e.rs  envelope.rs  intake.rs  lib.rs  preview.rs  report.rs  sanitize.rs  spool.rs
crates/itasha-report-core/tests/: consent_send_contract.rs  e2e_encryption_contract.rs  forbid_unsafe_audit.rs  sanitizer_properties.rs
crates/itasha-report-transport-tor/: Cargo.toml
crates/itasha-report-transport-tor/src/: config.rs  connector.rs  http.rs  hygiene.rs  lib.rs  transport.rs
crates/itasha-report-transport-tor/tests/: live_onion_e2e.rs
docs/: WIRING.md  adr-0001-report-core-ingest-boundary.md
supply-chain/: config.toml
