[package]
name = "itasha-crash-capture"
description = "Unsafe-ISOLATED native minidump capture (Tier-2). The ONLY W1TN3SS crate allowed unsafe, so consuming apps stay #![forbid(unsafe_code)]."
# Explicit (not workspace-inherited 0.0.0) so a release tag maps to a real
# semver and the crate is publishable — a tag-gated `v*` release must never ship
# a 0.0.0 binary, and a path-dep without a version blocks `cargo publish`.
# v0.1.0: first consumable release of the native Tier-2 capture, aligned with
# itasha-report-transport-tor / itasha-report-aggregate.
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
# NOT workspace-inherited (1.78): the Embark crash stack sets the real floor —
# `minidump-writer =0.12.0` declares `rust-version = "1.88"` / `edition = "2024"`,
# so this crate cannot build below 1.88. The workspace 1.78 would under-claim and
# break a 1.78–1.87 build. Verified from crates.io version metadata 2026-06-30.
rust-version = "1.88"

# Exact-pinned production dependencies (see dependency-management.md). These are
# the Embark out-of-process crash-capture stack — they carry unsafe/FFI (signal
# handlers, ptrace, Mach APIs, inline asm), which is precisely why they are
# isolated in THIS sibling crate and run minidump-writer in a SEPARATE monitor
# process. crash-context is pinned to the 0.6.x line because crash-handler 0.7,
# minidumper 0.10, and minidump-writer 0.12 all require `crash-context ^0.6`.
# itasha-report-core is consumed as a workspace PATH sibling for the
# Sentry-envelope + spool + report types (it stays #![forbid(unsafe_code)]).
[dependencies]
crash-handler = "=0.7.0"
minidumper = "=0.10.1"
minidump-writer = "=0.12.0"
crash-context = "=0.6.3"
itasha-report-core = { path = "../itasha-report-core", version = "0.2.0" }

[dev-dependencies]
# sadness-generator: Embark's controlled-crash harness for the (ignored,
# guarded) sadness-generator capture test. Dev-only — never in the shipped lib.
sadness-generator = "=0.7.0"

# The out-of-process MONITOR is a SEPARATE binary (the whole point of the Embark
# design: the crashed process's memory may be corrupted, so the dump is written
# from another process). Keeping it a `[[bin]]` is what the unsafe-isolation
# structural test asserts.
[[bin]]
name = "w1tn3ss-crash-monitor"
path = "src/bin/monitor.rs"
